# romm-fuse

./: Cargo.toml  README.md  ROADMAP.md  install.sh  uninstall.sh
.github/workflows/: ci.yml  release.yml
examples/: config.toml
examples/systemd/: romm-fuse.service
scripts/: build-arm.sh  lint.sh  local_install.sh
src/: config.rs  lib.rs  main.rs
src/api/: client.rs  types.rs
src/fs/: cache.rs  inodes.rs  mod.rs  romm_fs.rs  tree.rs
src/profiles/: builtins.rs  emulationstation.toml  mister.toml  mod.rs  retroarch.toml
tests/: integration.rs
