[package]
name = "romm-fuse"
version = "0.1.0"
edition = "2021"
description = "FUSE filesystem bridging RomM to directory-based emulation systems"

[dependencies]
fuser = "0.17"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
libc = "0.2"
sha2 = "0.10"
urlencoding = "2"
atty = "0.2"
